--- a/Design_Challenge/RoBERTaCNN.ipynb
+++ b/Design_Challenge/RoBERTaCNN.ipynb
@@ -833,7 +833,7 @@
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "csv_path = r'C:\\Users\\Parthasarathy.Harini\\Downloads\\NLP\\data\\test_data_movie.csv'\n",
+    "csv_path = r'C:\\Users\\Parthasarathy.Harini\\Downloads\\NLP\\data\\test_data_movie.csv'\n", #Replace with path to test set
     "test_data = pd.read_csv(csv_path)\n"
    ]
   },
