--- a/Design_Challenge/DistilBERT.ipynb
+++ b/Design_Challenge/DistilBERT.ipynb
@@ -669,7 +669,7 @@
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "csv_path = r'C:\\Users\\Parthasarathy.Harini\\Downloads\\NLP\\data\\test_data_movie.csv'\n", #REPLACE WITH PATH TO TEST SET
+    "csv_path = r'C:\\Users\\Parthasarathy.Harini\\Downloads\\NLP\\data\\test_data_movie.csv' #Replace with path to test set\n",
     "test_data = pd.read_csv(csv_path)\n"
    ]
   },
