--- a/Design_Challenge/RoBERTaCNN.ipynb
+++ b/Design_Challenge/RoBERTaCNN.ipynb
@@ -833,7 +833,8 @@
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "csv_path = r'C:\\Users\\Parthasarathy.Harini\\Downloads\\NLP\\data\\test_data_movie.csv'\n", #Replace with path to test set
+    "csv_path = r'C:\\Users\\Parthasarathy.Harini\\Downloads\\NLP\\data\\test_data_movie.csv'#Replace with Path to test set\n",
+    "\n",
     "test_data = pd.read_csv(csv_path)\n"
    ]
   },
