--- a/Design_Challenge/SentimentAnalyzer.ipynb
+++ b/Design_Challenge/SentimentAnalyzer.ipynb
@@ -691,7 +691,7 @@
    "outputs": [],
    "source": [
     "# Load the dataset\n",
-    "csv_path = r'C:\\Users\\Parthasarathy.Harini\\Downloads\\NLP\\data\\test_data_movie.csv'\n", #Replace with Path to test set
+    "csv_path = r'C:\\Users\\Parthasarathy.Harini\\Downloads\\NLP\\data\\test_data_movie.csv'# Replace with path to test set\n",
     "test_data = pd.read_csv(csv_path)\n"
    ]
   },
